--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,24 +1,20 @@
 {
-  "extends": "stylelint-config-standard-scss",
+  "extends": "stylelint-config-standard",
   "plugins": ["stylelint-order"],
-  "ignoreFiles": [
-    "**/*.js",
-    "**/*.md",
-    "**/*.json",
-    ".eslintrc.cjs",
-    "./src/assets/scss/base/normalize.scss"
-  ],
+  "ignoreFiles": ["**/*.js", "**/*.md", "**/*.json", ".eslintrc.cjs"],
   "rules": {
     "declaration-empty-line-before": "never",
     "media-feature-range-notation": null,
+    "import-notation": null,
+    "selector-class-pattern": "^[a-z0-9]+(?:__[a-z0-9]+)?(?:--[a-z0-9]+)?$",
     "order/order": [
       "custom-properties",
-      "dollar-variables",
       {
         "type": "at-rule",
-        "name": "include",
-        "hasBlock": false
-      }
+        "name": "media"
+      },
+      "declarations",
+      "rules"
     ],
     "order/properties-alphabetical-order": null,
     "order/properties-order": [
