--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -6,7 +6,7 @@
     "declaration-empty-line-before": "never",
     "media-feature-range-notation": null,
     "import-notation": null,
-    "selector-class-pattern": "^[a-z0-9]+(?:__[a-z0-9]+)?(?:--[a-z0-9]+)?$",
+    "selector-class-pattern": "^[a-z0-9]+(?:__[a-z0-9]+)?(?:[-]{1,2}[a-z0-9]+)?$",
     "order/order": [
       "custom-properties",
       {
