--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "vite-plugin-minify": "^2.1.0"
   },
   "dependencies": {
+    "fslightbox": "^3.5.1",
     "intl-tel-input": "^25.3.1",
     "swiper": "^11.2.6"
   }
